--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,143 @@
           <span class="big-card__day big-card__day--fourth">144 Today</span>
         </div>
       </div>
-      <!--  <h2 class="title-card"></h2>
-      <div class="small-cards"></div> -->
+      <h2 class="title-card">Overview - Today</h2>
+      <div class="small-cards">
+        <div class="small-card">
+          <span class="small-card__text">Page Views</span>
+          <img
+            src="assets/images/icon-facebook.svg"
+            alt="icon facebook"
+            class="small-card__icon"
+          />
+          <span class="small-card__number">87</span>
+          <img
+            src="assets/images/icon-up.svg"
+            alt="icon up"
+            class="small-card__arrow"
+          />
+          <span class="small-card__percentage">3%</span>
+        </div>
+        <div class="small-card small-card--second">
+          <span class="small-card__text">Likes</span>
+          <img
+            src="assets/images/icon-facebook.svg"
+            alt="icon facebook"
+            class="small-card__icon"
+          />
+          <span class="small-card__number">52</span>
+          <img
+            src="assets/images/icon-down.svg"
+            alt="icon up"
+            class="small-card__arrow small-card__arrow--second"
+          />
+          <span class="small-card__percentage small-card__percentage--second"
+            >2%</span
+          >
+        </div>
+        <div class="small-card small-card--third">
+          <span class="small-card__text">Likes</span>
+          <img
+            src="assets/images/icon-instagram.svg"
+            alt="icon instagram"
+            class="small-card__icon"
+          />
+          <span class="small-card__number">5462</span>
+          <img
+            src="assets/images/icon-up.svg"
+            alt="icon up"
+            class="small-card__arrow small-card__arrow--third"
+          />
+          <span class="small-card__percentage small-card__percentage--third"
+            >2257%</span
+          >
+        </div>
+        <div class="small-card small-card--fourth">
+          <span class="small-card__text">Profile Views</span>
+          <img
+            src="assets/images/icon-instagram.svg"
+            alt="icon instagram"
+            class="small-card__icon"
+          />
+          <span class="small-card__number">52k</span>
+          <img
+            src="assets/images/icon-up.svg"
+            alt="icon up"
+            class="small-card__arrow small-card__arrow--fourth"
+          />
+          <span class="small-card__percentage small-card__percentage--fourth"
+            >1375%</span
+          >
+        </div>
+        <div class="small-card small-card--fifth">
+          <span class="small-card__text">Retweets</span>
+          <img
+            src="assets/images/icon-twitter.svg"
+            alt="icon twitter"
+            class="small-card__icon"
+          />
+          <span class="small-card__number">117</span>
+          <img
+            src="assets/images/icon-up.svg"
+            alt="icon up"
+            class="small-card__arrow small-card__arrow--fifth"
+          />
+          <span class="small-card__percentage small-card__percentage--fifth"
+            >303%</span
+          >
+        </div>
+        <div class="small-card small-card--sixth">
+          <span class="small-card__text">Likes</span>
+          <img
+            src="assets/images/icon-twitter.svg"
+            alt="icon twitter"
+            class="small-card__icon"
+          />
+          <span class="small-card__number">507</span>
+          <img
+            src="assets/images/icon-up.svg"
+            alt="icon up"
+            class="small-card__arrow small-card__arrow--sixth"
+          />
+          <span class="small-card__percentage small-card__percentage--sixth"
+            >553%</span
+          >
+        </div>
+        <div class="small-card small-card--seventh">
+          <span class="small-card__text">Likes</span>
+          <img
+            src="assets/images/icon-youtube.svg"
+            alt="icon youtube"
+            class="small-card__icon"
+          />
+          <span class="small-card__number">107</span>
+          <img
+            src="assets/images/icon-down.svg"
+            alt="icon up"
+            class="small-card__arrow small-card__arrow--seventh"
+          />
+          <span class="small-card__percentage small-card__percentage--seventh"
+            >19%</span
+          >
+        </div>
+        <div class="small-card small-card--eighth">
+          <span class="small-card__text">Total Views</span>
+          <img
+            src="assets/images/icon-youtube.svg"
+            alt="icon youtube"
+            class="small-card__icon"
+          />
+          <span class="small-card__number">1407</span>
+          <img
+            src="assets/images/icon-down.svg"
+            alt="icon up"
+            class="small-card__arrow small-card__arrow--eighth"
+          />
+          <span class="small-card__percentage small-card__percentage--eighth"
+            >12%</span
+          >
+        </div>
+      </div>
     </main>
   </body>
 </html>
